--- a/image-classification/dlnd_image_classification.ipynb
+++ b/image-classification/dlnd_image_classification.ipynb
@@ -14,11 +14,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CIFAR-10 Dataset: 171MB [00:26, 6.39MB/s]                                                                              \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All files found!\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -79,11 +94,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Stats of batch 1:\n",
+      "Samples: 10000\n",
+      "Label Counts: {0: 1005, 1: 974, 2: 1032, 3: 1016, 4: 999, 5: 937, 6: 1030, 7: 1001, 8: 1025, 9: 981}\n",
+      "First 20 Labels: [6, 9, 9, 4, 1, 1, 2, 7, 8, 3, 4, 7, 7, 2, 9, 9, 9, 3, 2, 6]\n",
+      "\n",
+      "Example of Image 13:\n",
+      "Image - Min Value: 0 Max Value: 244\n",
+      "Image - Shape: (32, 32, 3)\n",
+      "Label - Label Id: 2 Name: bird\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAfoAAAH0CAYAAADVH+85AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAWJQAAFiUBSVIk8AAAGE9JREFUeJzt3cuPZOd5HvDv1K27enpu5FAmLVoKHUWyIhNSFCCJ7QSw\nYeQCGMjKyCLwxsv8Xdln51WABDEiLQxYlBQnJhVQ4s3Di2aGnOmevlXVOVnYC3sT+Hs4U02++P32\nL95Tp746T53VM0zT1ACAmmbXfQEAwPMj6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0A\nFCboAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUtrjuC3heXljMp70tm8JVw9A9Mpvt\n97/Z8AW/xim996HkfiQz+7bPz5XOjcHYPk9Hehb3eR+/DGdxn8ZxjOaS73q320W7HpxdfO4vzRs9\nABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYWXb\n6/ba0vQlaISawktM5tLGsOQ27re7rrXkNs6f+VX8/2Rf9DQL5sJzH39nSVtbuutLIHrGDWHD3l5/\naeG5Ch5W+8yJ+Xy/T4K/zRs9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCbo\nAaAwQQ8AhQl6ACisbKnNPu21QGfPsiqLsAAjKS0Z9vtfNeoRCf9P7/NUjcEH23+hUHI+nsOFfInl\n92Pf33Ygbe7ak+vMCW/0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DC\nBD0AFCboAaAwQQ8AhZVtrxvT7q89Fgwlq9IGpHguGlpGu2bz4H9n+H2Nu/Q/7rx7YphlzV+Ltuue\nmeJz3z83tjFaNRv6P1drrQ1D/75pj41ms1m6a5+/6bRZcn/vhFNalJc0S6ZfWXCN03h9DYDe6AGg\nMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYWVLbVpSkBKK\nazOCRoW0nGY29Jex/PXC/oKaYXkYrZov+ufmN+9Fu17+7m9Hcze+8s3umb96dBHtOnnwQffM7OO/\njHYtPv1F98xw9TjatYmLiLbdM2mBTvKrHoastCQuVsm27XNZJryPU1TYk5Z9JQ06WQnUs+CNHgAK\nE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoLC67XVT\n2iS1v3anvfZIzbL2umGx6p6ZHxxEu45uvtQ9863f/w/Rrtv/5PeiuYcfPeieOVxeRrvOb36je+by\n3nejXZdB693h+z+Idi3O+lv5WmttN/Tfx9mUPeJmY//zYxo20a5xr61m4VMneJzmj9K0UW5/kqa8\nYXZ979Xe6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANA\nYYIeAAor2143jlkj1OwaG4b+PtJ2vWHaRnOzsb8xbDH0N9611tqtdf9nu3dxP9q1+ss/jebOH/ff\nj28e3Ip2ncxvdM+8P2YNah9uX+ieOX3pd6Ndh1f9TXmttbZ69Gb3zPLyJNo1Dv3tZNug8a611oaW\n/TazvrbsGltwP8JNseTZneZEZK91pX/XFzvVAIDPRdADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAw\nQQ8AhQl6AChM0ANAYYIeAAoT9ABQWNlSm7Q/YJiCKoawaCb5lxVdX2utTVl5w7S76p7ZnD+Jdj38\nuL/c4+Gb2ef63e+9Hs29euvr3TMnmwfRrvsP/nf3zNkvPox2zbeH3TPn3/5X0a7PvvL70dzVz3/a\nPXP0f/8k2rU6ebt7ZrZJf5vZ82NKamOGXbQrKbWJ+3PC5+kUPBvTXYnk+p4Vb/QAUJigB4DCBD0A\nFCboAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFlW2vm4VNQbOkzSjc\nlfQmRdfXsvKp1GyXNWSN56fdM++890606+SV7BoXlz/qnnn6aBPtGi8uumd+Y7GOdt165ZXumV/e\nexzt+uEuaxz8q+Wvd88Md74f7RouPu2emW/vR7umYZ7NTcm5yu592kQXrbrGlrfnSXsdAPBcCHoA\nKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKK1tq08Lyl2xVWDSz\nz2vc49wQblsmfUJjVhhz98Ws/OXbt5bdM3/6RlZ2crS+1T0zC9tHNmcfdc8c/OS/RLt+c/3jaO6o\nvdY9837rv4ettXZ287vdM+vNSbRrvsnKgZJf2TilT4L+Mpy0xGWfz9P0Gr9sxTve6AGgMEEPAIUJ\negAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYYIeAAor2143CxuQork9\nti2lzU7TLJ3r/y84zLP/j9Ni3j1zHjbl/eyjy2juX//T/laz7w93ol0fPDjvnnnv46wJ7eH5k+6Z\nq+1n0a67w1vR3L9Yf9I989LxS9Guny/udc/MZq9Hu6YHb0Rz4/ZR/1BcmNn/mx7H/sa7zyNplEtb\n6JLPdp2Nd97oAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQ\nA0Bhgh4ACivbXrdYZB9tn41yQ9AMl7bytWDX3yzsHpnP+1voWmttHrTXzRbraNcb72VNUv9n+Y+7\nZ/7ZH/9xtOvX7j/snjn40V9Eu9q773SPbK/OolXb85Nobjzpb6/73sEH0a6v3+hvN3yj3Y52nV4c\nR3Pz0/6mws0u+22O01U0V1XyzNdeBwA8F4IeAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQ\nA0Bhgh4AChP0AFCYoAeAwsqW2vyj7/1ONDcGxQOb7Rjt2o39c+Mu2zUGu1rLihjy6ob+oojZfBVt\nOh2zcqD//Cd/3j9097Vo1/d/8/Xumd9+Idv12qePumfOTvpnWmvt5MH9aO70wYfdM9PjX0a7Vkd3\nu2duXnw12vVffxCNtYv3d90zy4sH0a7tlJThZL+xadrfs2qfZmmx2LPYfW2bAYDnTtADQGGCHgAK\nE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMKGL3rjT+qnf/Fm9MHG\nMWiv22X38Gqz7Z+5uop27bb9u1prbbfrb8iKm/KCex+uamPwuVpr7dGj/sa29dE62vUPfu2V7plp\nt4l2bTb9N/Kdd96Ndr33bjZ386i/bHPcnUe7zs5O+4dWt6NdP30v+03/+Y/+V/fM5S/finbNLz/p\nnhl34bMq/E0nrXdp/u0zNz/89ElWA/i3eKMHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0\nAFCYoAeAwgQ9ABQm6AGgMEEPAIX1t0R8STz64CfR3DTr7w9YrbLSkhdfvNc9M7+ZfWXDsIzmlssb\n3TPz+Tza1Vr/vR/DcontNiu1GXcvBFPZ/fjko/4ikcefPY52nZ6edc/sLrPCmNvHq2hutuo/H2/8\n5OfRrp/8uL8wZr7LiqNW6+y3uR4Pu2fGo/6ipNZauzy42z0znX8Y7ZqfP4zmpuT5EW3KXGeBnDd6\nAChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwsq2\n1/34z34YzR3duhlM9bcmtdbavRdf6p45OjqKdm02WbPWjRvH3TPrddbml9zFacr6p9KGvcWiv2ns\n4CC7H3eP+69xPe9vNGuttQ/OH3XPfOXVO9Gu1bL/3LfW2jT1Nw4up+zcv/Xm290zH9//KNo1Pcpa\nANvQ34a2XGRncbZ6sX/oKHmWtrbdZg2M281VNBe5viK6iDd6AChM0ANAYYIeAAoT9ABQmKAHgMIE\nPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFBY2VKbo8Mb0dxuEwyNWcPBxelF98x6kZWWrFfZ\n3OXTs/5di1W06+hGUNgzZfd+GLIiotm8f27a9n/PrbW23QTXuA3vx9S/ax2W9Xz1q78azZ08ftg9\nc7zKHnEHwdhs3l+601prw5S9b202/ecqmWmtteH8s/6hsPhlHLMiojYEBVdhKVZSKJQ9cZ4Nb/QA\nUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFlW2v\ne/vtt6O53dB/S9YHB9Gus9PT7pmPP/oo2nV8nLX5LZf99+Pq8jLadefO7e6Z3Zg1hq1W2XeW3I/t\nNrsfu+Cj3Ti6E+3abvtrG996681o1y5sJ3ty9rR75sc/ezfa9eDhx90z24sn0a5xl/WajWN/89oU\ntj1OQctbcn1/M5mNBY1yccVeMneN9XXe6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0A\nFCboAaAwQQ8AhQl6AChM0ANAYYIeAAob0jajL7rX7h5HH2yxXPbPLLL/S/NZf53RfD7Pdi36P1dr\nrS2Wq+6Z9Xod7RqS2xj+VV0ssuLG+TxYGLZ4jWP/EV6vj6Jdu11/o9yjx1lb22zRf6Zaa21Y3eqe\nuRwPo11PHn7YPXP2WdYs2YZ91pqljXL9ZzFPlj02yqWbglXTlH3P9x8++dwHxBs9ABQm6AGgMEEP\nAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6ACgsa/b4EpiGrFhl09/t0VrL\nOgeeXpx3z+zCgpTtNpu72uy6Z6Yp27UKCnSGsORnGZfa9O8bw+KoKSjpSAuF5ocH3TNXYUlHm2fn\nY327/7MdHd2Mds1nn3bPjLvse56FT+HsWIXFL0NahlPTEBQRDS17Vj0L3ugBoDBBDwCFCXoAKEzQ\nA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKK9teNz+6Fc0tglaz1cFh\ntOuw9TdCXV2cRrs2l5fR3Dqo85vaMtp1cPNO98wwz/6rzubZNbagYS9trxu3V90zB+G5n837P1fb\nZGdqscwa9tZ3Xw6m+tsXW2ttGxTzpWV+aftl1kQX7pqS39k+P1e6b5+7ro83egAoTNADQGGCHgAK\nE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQWNlSm+XRC9lcUFqyPjiKds2m\n/sKNy9PzaNflVVbeMAvKLA7WN6Ndx3de7Z4Zh+wIb8Mui2HVX8gyD39l24un3TOLsNSmBcU7U3sc\nrRqHg2huvui/9+PYXwzUWmvj0H/up7DoZApLjzJpGcs+S1yq7ro+3ugBoDBBDwCFCXoAKEzQA0Bh\ngh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKK9tet75xL5pbrOb9Q5uTaNf7\n7/6se+bJk0fRrt1uG80NQbnT8ulptGtc9B/He698I9o1m2eNg+3wsH8kaERsrbXLoX9uDBreWmtt\nnPrPx6z1t+u11toUNCK21tosaCrcDWFrY/BoXCQ/ltbiArWp9bdfDvGyqu+EaXNgcB+vsSiv6rcH\nADRBDwClCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKK9te\n9zv//PVobtpeds/82Q//R7Rre3nWPbNaLKNdu/AvXVLIlZZ4XTz+pHvm6jhrobvzq78RzU2Hx90z\ni1l2Q+bbg+6Zy7BlbNv6z9UQNgAer7M2v1954Wb3zNX2Kto1fXqrf+a0f6a11sZxE83txov+obSs\nbUzOcLYsvcRpSib31ziYfq5nwRs9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0A\nFCboAaAwQQ8AhQl6ACisbKnNf/zDP4jmLj571D3z9MEH0a4nT592z1yc98+01lob+8t6WmttGObd\nM/PFOtp1IyiM+a3vfDPa9Vu/9y+juSeb/mucBfewtdY256fdM4/PsxKXXdBEdPq0//paa+3Vl1+I\n5r7zrW91z1xdnUe7/vt/638H+sH/zO7H5ir7be52/d/1OGbno0277pHZLHuPnKYxmttut90z467/\nc7XW2hhU1Ci1AQCeC0EPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM\n0ANAYYIeAAor2143Xx5Gcy+9/HL3zB/8238T7To9729beufD+9Guy03WkDULOpdu3bgV7Xr9m/1N\ndH/07/9dtOtr385a765a/2c7Osza/Hab/qbCTz47i3Zdjf3tdedBu15rrc0XWY/X1772690zZ2fZ\nNX7y8be7Zx4/7m++bK218/OLaG6+6H98j7vsOdCC1rvVahWtShozW2tts+l/nm6DmdZaG8f+hr0h\naIh8VrzRA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DC\nypbaLI8Osrll/3+f1/5hVpDyn/7oqHvm44dZccaHj59Ecyen/XNff6W/GKi11r7z2te6Z37lpa9E\nu3bLG9Hc0JbdM7OD/pnWWrvc9Z/FaZYVZ9x78cXumd2YlRc9ePBxNHd52V/+sg3KR1pr7XLbX3Zy\nEhbonJxkv81xu+me2VyeR7va2H8/lnGpTXaGd7td/9CUFSy14BpXy+w58Cx4oweAwgQ9ABQm6AGg\nMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6ACisbHvdQdic1ILipNX6\nZrTq1de+3j3zjde/F+1ahcVJv3j7590zN2/djnbdPQ4aBxfZB1uts3bDq6BRbhne/MvL/ms8vpG1\ncd2+1d/mt03awlprn336aTQ3Tf1NdMuwOfDk/LJ75r37n0S7Th9n9+MqaMubtmfRrmnqb8pLTWGj\n3BicjylsN0zMF9cXt97oAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCF\nCXoAKEzQA0Bhgh4ACivbXrcK2+uWs/76uouhv+mqtdbOg0KozUXWGHY0BrV8rbXlYt0/NGTNcAcH\nx90zy7CFbpyHR3/ef66G2TxalbR4LcI2v8vL/nO12WZnMX3sHB4edc9sW3aNs1n/O9A2vh/Zb3M+\n7z9X45i9201TsCtsNwzL69qQ3MchvR/9F7mLz8fn540eAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCF\nCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABRWttRmCj/aPCg7ma+yYpXjYOxsmxVgDLsxmnvh3ovd\nM4ujW9Gu5bq/MCYpH2mttctNNrcd+u//NGyzXUG5xxhcX2utbab+axwW4VkM57Kuk+x7Xi6Dszhk\nhUJtyq5xGPrvSFoYMwWlWEkRTmutDS17Vk1hgdG+DOFv81nwRg8AhQl6AChM0ANAYYIeAAoT9ABQ\nmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFBY2fa62ZA1ym2DyrDFwXG0a33YPxeU\njP31rmVWW7Xd9i/cLQ6zXfP+/53zIWvIugrv4yap/5plbVwXl5fdM6uD7NzPgnuftnEtFtljZwr6\n69J2w9u373TPzMPPtRuz83F9XWh/P3lZW9iKOPR/11NY55fMpbueBW/0AFCYoAeAwgQ9ABQm6AGg\nMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaCwsqU250EhSGut3Thcdc8Mi+z/0uLo\nZvfMcdtFu2azbG7zpP8+Hh4eRbuWh0GpzSw7wotZ1mpz8fS8e2bWltGuxbz/LLYxO4tD6y8H2mzC\ne3hxFc1tb/Sf4cN1du93u6DMaczuxzSExSrB3DRkBTpt6L/3ealNan8LldoAAF8Ygh4AChP0AFCY\noAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFDZcZ6MOAPB8eaMHgMIE\nPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGC\nHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoDBB\nDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJig\nB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYf8PBoe0/51McRkAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x2c76fd78320>"
+      ]
+     },
+     "metadata": {
+      "image/png": {
+       "height": 250,
+       "width": 253
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format = 'retina'\n",
@@ -93,7 +140,7 @@
     "\n",
     "# Explore the dataset\n",
     "batch_id = 1\n",
-    "sample_id = 5\n",
+    "sample_id = 13\n",
     "helper.display_stats(cifar10_dataset_folder_path, batch_id, sample_id)"
    ]
   },
@@ -108,11 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def normalize(x):\n",
     "    \"\"\"\n",
@@ -120,8 +175,11 @@
     "    : x: List of image data.  The image shape is (32, 32, 3)\n",
     "    : return: Numpy array of normalize data\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    # Will assume that range is 0-255 (each a color intensity for each RGB channel).\n",
+    "    # This means the minimum for our range is 0, the maximum is 255.\n",
+    "    # Normalization is given by xn = (x - range_min) / (range_max - range_min)\n",
+    "    # Plugging in our numbers: xn = (x - 0) / (255 - 0) = x / 255    \n",
+    "    return x / 255\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -142,11 +200,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def one_hot_encode(x):\n",
     "    \"\"\"\n",
@@ -154,9 +220,36 @@
     "    : x: List of sample Labels\n",
     "    : return: Numpy array of one-hot encoded labels\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
-    "\n",
+    "    # Since we'll have labels from 0-9, we can assume that the result will be a hot-encoded 10-element array.\n",
+    "    # E.g.: 0 -> [1 0 0 0 0 0 0 0 0 0]\n",
+    "    #       1 -> [0 1 0 0 0 0 0 0 0 0]\n",
+    "    #       ...\n",
+    "    #       9 -> [0 0 0 0 0 0 0 0 0 1]\n",
+    "    #\n",
+    "    # So, basically, everything is a 0, except for the value indexed by the label itself.\n",
+    "    \n",
+    "    # Code inspired in http://stackoverflow.com/a/29831596/147507\n",
+    "    \n",
+    "    # As an example, let's say we have 50 labels to convert\n",
+    "    label_count = len(x)\n",
+    "    \n",
+    "    # Array of zeros. Following our example, this will be shaped (50, 10). Ready to be one-hot-encoded.\n",
+    "    one_hot_encoded = np.zeros((label_count, 10))\n",
+    "    \n",
+    "    # np.arange(label_count) will be 0..label_count-1 (0..49)\n",
+    "    # x will be the value to be hot-encoded, since it's an array of the same dimension (50 in our example), each value\n",
+    "    # is used to reference each row.\n",
+    "    # So, if label values were [5 2 0 5 9], the first indexing values would be:\n",
+    "    # - [0, 5]\n",
+    "    # - [1, 2]\n",
+    "    # - [2, 0]\n",
+    "    # - [3, 5]\n",
+    "    # - [4, 9]\n",
+    "    \n",
+    "    # Setting all of these to 1 has the effect of hot-encoding, since the label matches the index.\n",
+    "    one_hot_encoded[np.arange(label_count), x] = 1\n",
+    "    \n",
+    "    return one_hot_encoded\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -182,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -205,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
