Adjustments on label selection algorithm

--- a/embeddings/Skip-Gram word2vec.ipynb
+++ b/embeddings/Skip-Gram word2vec.ipynb
@@ -73,7 +73,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Text8 Dataset: 31.4MB [00:02, 11.0MB/s]                            \n"
+      "Text8 Dataset: 31.4MB [00:03, 9.53MB/s]                                                                                \n"
      ]
     }
    ],
@@ -203,36 +203,36 @@
     {
      "data": {
       "text/plain": [
-       "{'anacharsis': 47134,\n",
-       " 'antiquity': 5086,\n",
-       " 'atheling': 58115,\n",
-       " 'casemate': 58112,\n",
-       " 'digressions': 58113,\n",
-       " 'divisive': 26184,\n",
-       " 'ego': 10464,\n",
-       " 'eugenio': 31892,\n",
-       " 'filename': 19750,\n",
-       " 'fret': 27957,\n",
-       " 'gaping': 56229,\n",
-       " 'headgear': 44611,\n",
-       " 'jima': 28629,\n",
-       " 'kaze': 58114,\n",
-       " 'keegan': 30107,\n",
-       " 'leah': 25636,\n",
-       " 'marlins': 10638,\n",
-       " 'monticello': 59877,\n",
-       " 'motherboard': 12137,\n",
-       " 'notify': 30106,\n",
-       " 'originally': 605,\n",
-       " 'pilgrimages': 30964,\n",
-       " 'preterist': 40561,\n",
-       " 'princip': 27349,\n",
-       " 'recluse': 36074,\n",
-       " 'rectifier': 47135,\n",
-       " 'rouge': 7453,\n",
-       " 'secularism': 24623,\n",
-       " 'solids': 7452,\n",
-       " 'substantiate': 38934}"
+       "{'aberdeenshire': 23330,\n",
+       " 'anthromorphic': 58115,\n",
+       " 'belied': 58112,\n",
+       " 'budd': 27379,\n",
+       " 'cliffs': 11577,\n",
+       " 'cloister': 19222,\n",
+       " 'demetrius': 25098,\n",
+       " 'dramas': 15373,\n",
+       " 'eldest': 6667,\n",
+       " 'emphasising': 34947,\n",
+       " 'equalling': 50095,\n",
+       " 'expects': 14777,\n",
+       " 'frud': 36074,\n",
+       " 'gign': 58117,\n",
+       " 'heraldic': 20564,\n",
+       " 'idiom': 18741,\n",
+       " 'keeshond': 25097,\n",
+       " 'kon': 33800,\n",
+       " 'lanczos': 58114,\n",
+       " 'marque': 24172,\n",
+       " 'parable': 26184,\n",
+       " 'patrologia': 58116,\n",
+       " 'resembled': 14259,\n",
+       " 'saif': 54410,\n",
+       " 'staged': 7808,\n",
+       " 'studios': 3955,\n",
+       " 'tk': 26752,\n",
+       " 'unrivalled': 53721,\n",
+       " 'wmap': 28629,\n",
+       " 'yougov': 58113}"
       ]
      },
      "execution_count": 6,
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -256,16 +256,16 @@
     {
      "data": {
       "text/plain": [
-       "16680599"
+       "'16,680,599'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(int_words)"
+    "\"{:,}\".format(len(int_words))"
    ]
   },
   {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -301,7 +301,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Words dropped: 12054330, final size: 4626269\n"
+      "Words dropped: 12,055,056, final size: 4,625,543\n"
      ]
     }
    ],
@@ -310,19 +310,18 @@
     "\n",
     "t = 1e-5\n",
     "\n",
-    "word_counts = Counter(words)\n",
-    "amount_of_total_words = len(words)\n",
+    "word_counts = Counter(int_words)\n",
+    "amount_of_total_words = len(int_words)\n",
     "\n",
-    "def subsampling_probability(threshold, current_word):\n",
-    "    current_word_count = word_counts[current_word]\n",
+    "def subsampling_probability(threshold, current_word_count):\n",
     "    word_relative_frequency = current_word_count / amount_of_total_words\n",
     "    return 1 - np.sqrt(threshold / word_relative_frequency)\n",
     "\n",
-    "probability_per_word = { i: subsampling_probability(t, int_to_vocab[i]) for i in int_words }\n",
+    "probability_per_word = { current_word: subsampling_probability(t, current_word_count) for current_word, current_word_count in word_counts.items() }\n",
     "\n",
     "train_words = [ i for i in int_words if np.random.random() > probability_per_word[i] ]\n",
     "        \n",
-    "print(\"Words dropped: {}, final size: {}\".format(len(int_words) - len(train_words), len(train_words)))"
+    "print(\"Words dropped: {:,}, final size: {:,}\".format(len(int_words) - len(train_words), len(train_words)))"
    ]
   },
   {
@@ -353,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -364,16 +363,17 @@
     "def get_target(words, idx, window_size=5):\n",
     "    ''' Get a list of words in a window around an index. '''\n",
     "    \n",
-    "    r = np.random.randint(1, window_size)\n",
+    "    r = np.random.randint(1, window_size + 1)\n",
     "    min_index = max(idx - r, 0)\n",
     "    max_index = idx + r\n",
     "    \n",
-    "    return words[min_index:max_index]"
+    "    words_in_batch = words[min_index:idx] + words[idx + 1:max_index + 1] # avoid returning the current word on idx\n",
+    "    return list(set(words_in_batch)) # avoid duplicates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -381,16 +381,16 @@
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 4]"
+       "[1, 2, 3, 4, 6, 7, 8, 9, 10]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_target([1, 2, 3, 4, 5, 6, 7, 8, 9, 10], 2, 3)"
+    "get_target([1, 2, 3, 4, 5, 6, 7, 8, 9, 10], 4, 5)"
    ]
   },
   {
@@ -2031,10 +2031,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
-  },
-  "widgets": {
-   "state": {},
-   "version": "1.1.2"
   }
  },
  "nbformat": 4,
